--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -156,7 +156,7 @@
                 <button id="next" onclick="slidy.to(options.index + 1)">→</button>
             </nav>
 
-            <nav id="dots"></nav>
+            <!-- <nav id="dots"></nav> -->
 
             <nav id="buttons">
                 <button id="loop" onclick="slidy.update({ loop: options.loop = !options.loop })">
