@slidy/core - 3.4.8 - replace layout -> deck

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -100,10 +100,11 @@
                 gravity: 1.2,
                 duration: 375,
                 loop: false,
+                deck: false,
                 vertical: false,
                 snap: 'center',
-                // layout: 'reel',
-                // animation: animations.stairs,
+                animation: animations.stairs,
+                easing: easings.lenear
             };
             window.position = 0;
             window.slidy = null;
