--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -100,11 +100,10 @@
                 gravity: 1.2,
                 duration: 375,
                 loop: false,
-                deck: true,
-                vertical: false,
                 snap: 'center',
-                animation: animations.shuffle,
-                easing: easings.lenear,
+                // axis: undefined,
+                // animation: animations.shuffle,
+                // easing: easings.lenear,
             };
             window.position = 0;
             window.slidy = null;
@@ -121,7 +120,7 @@
 
             console.log('window:', window);
 
-            fetch('https://unpkg.com/@slidy/core/package.json')
+            fetch('https://unpkg.com/@slidy/core/package.json', { mode: 'cors' })
                 .then(async (res) => await res.json())
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
@@ -143,7 +142,7 @@
                 </svg>
             </a>
         </header>
-        <main id="main" style="--gap: 2rem; --flow: row; --width: 50%; --height: 375px">
+        <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
             <ul id="node" tabindex="0"></ul>
             <nav id="thumbs"></nav>
         </main>
@@ -157,28 +156,31 @@
                 <button id="next" onclick="slidy.to(options.index + 1)">→</button>
             </nav>
 
-            <!-- <nav id="dots"></nav> -->
+            <nav id="dots"></nav>
 
             <nav id="buttons">
                 <button id="loop" onclick="slidy.update({ loop: options.loop = !options.loop })">
                     loop
                 </button>
-                <button id="deck" onclick="slidy.update({ deck: options.deck = !options.deck})">
-                    deck
-                </button>
-                <button id="vertical" onclick="slidy.update({ vertical: options.vertical = !options.vertical})">
+                <!-- <button id="reverse" onclick="slidy.update({ reverse: options.reverse = !options.reverse})">
+                    reverse
+                </button> -->
+                <!-- <button id="vertical" onclick="slidy.update({ vertical: options.vertical = !options.vertical})">
                     vertical
-                </button>
+                </button> -->
             </nav>
 
             <form>
                 <fieldset>
+                    <label title="axis">axis
+                        <select id="axis" name="axis" onchange="slidy.update({ axis: this.value })"></select>
+                    </label>
+                    <!-- <label title="direct">direct
+                        <select id="direct" name="direct" onchange="slidy.update({ direct: this.value })"></select>
+                    </label> -->
                     <label title="snap">snap
                         <select id="snap" name="snap" onchange="slidy.update({ snap: this.value })"></select>
                     </label>
-                    <!-- <label title="layout">layout
-                        <select id="layout" name="layout" onchange="slidy.update({ layout: this.value })"></select>
-                    </label> -->
                     <label title="animation">animation
                         <select id="animation" name="animation"
                             onchange="slidy.update({ animation: animations[this.value] })"></select>
@@ -220,6 +222,14 @@
                     <label title="length">length
                         <input id="length" onchange="utils.changeLength(this)" name="length" type="number" size="1"
                             step="1" min="1" max="50" />
+                    </label>
+                    <label title="flow">flow
+                        <select id="flow" name="flow" onchange="utils.setFlow(this.value)">
+                            <option>row</option>
+                            <option>row-reverse</option>
+                            <option>column</option>
+                            <option>column-reverse</option>
+                        </select>
                     </label>
                     <label title="width">width
                         <input onchange="utils.setVar(this)" name="width" size="4" />
