--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -92,7 +92,7 @@
             window.easings = easings;
             window.animations = animations;
             window.options = {
-                index: 0,
+                index: 4,
                 clamp: 0,
                 indent: 1,
                 length: 9,
@@ -102,7 +102,7 @@
                 loop: false,
                 snap: 'center',
                 // axis: undefined,
-                // animation: animations.shuffle,
+                animation: animations.stairs,
                 // easing: easings.lenear,
             };
             window.position = 0;
