@slidy/core - dev stand

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -253,7 +253,12 @@
                 acceleration, gravity & infinite loop mode.
             </p>
 
-            <img alt="Slidy Flip animation" src="assets/flip.gif" />
+            <figure>
+                <img alt="animation Flip" src="assets/flip.gif" width="100%" />
+                <figcaption style="color: var(--surface-4);">
+                    <pre><code>{ snap: deck, animation: flip }</code></pre>
+                </figcaption>
+            </figure>
 
             <h2>Packages</h2>
             <ul>
