@slidy/core - remove duration from to()

--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -256,7 +256,7 @@
             <figure>
                 <img alt="animation Flip" src="assets/flip.gif" width="100%" />
                 <figcaption style="color: var(--surface-4);">
-                    <pre><code>{ snap: deck, animation: flip }</code></pre>
+                    <pre><code>{ snap: 'deck', animation: flip }</code></pre>
                 </figcaption>
             </figure>
 
@@ -305,6 +305,7 @@
 
             <p>MIT © <a href="https://github.com/Valexr">Valexr</a></p>
         </article>
+        <br>
     </body>
 
 </html>
