--- a/packages/core/dev/index.html
+++ b/packages/core/dev/index.html
@@ -131,7 +131,7 @@
             <a id="github" href="https://github.com/Valexr/Slidy" /></a>
         </header>
 
-        <main id="main" style="--gap: 2rem; --flow: row; --width: 100%; --height: 375px">
+        <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
             <ul id="node" tabindex="0"></ul>
             <nav id="thumbs"></nav>
         </main>
