--- a/packages/solid/public/index.html
+++ b/packages/solid/public/index.html
@@ -8,9 +8,10 @@
         <meta http-equiv="Expires" content="0" />
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="global.css" />
+        <link rel="stylesheet" href="tokens.css" />
         <link rel="stylesheet" href="build/bundle.css" />
 
-        <title>Slidy 3.0 - ReactJS</title>
+        <title>Slidy 3.0 - SolidJS</title>
 
         <script defer src="build/bundle.js"></script>
     </head>
