--- a/packages/wc/public/index.html
+++ b/packages/wc/public/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto"
-        />
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
 
-        <link rel="apple-touch-icon" type="image/png" sizes="any" href="/apple-touch-icon.png" />
-        <link
-            rel="apple-touch-icon-precomposed"
-            type="image/png"
-            sizes="any"
-            href="/apple-touch-icon-precomposed.png"
-        />
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="assets/apple-touch-icon.png" />
+        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any"
+            href="assets/apple-touch-icon-precomposed.png" />
+        <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
         <link rel="stylesheet" href="slidy.css" />
 
         <title>Slidy 3.1.3 - WebComponent</title>
 
-        <script type="module" src="dev.js"></script>
+        <script type="module" src="build/dev.js"></script>
 
         <script type="module">
             import * as utils from './utils.js';
@@ -100,13 +95,7 @@
             <button id="dark" onclick="activate(this, dark)">dark</button>
         </header>
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
-            <slidy-wc
-                id="node"
-                tabindex="0"
-                itemWidth="var(--width)"
-                height="350px"
-                space="var(--gap)"
-            >
+            <slidy-wc id="node" tabindex="0" itemWidth="var(--width)" height="350px" space="var(--gap)">
                 <img id="0" src="https://picsum.photos/id/10/1280/800.jpg" alt="alt" />
                 <img id="1" src="https://picsum.photos/id/11/1280/800.jpg" alt="alt" />
                 <img id="2" src="https://picsum.photos/id/12/1280/800.jpg" alt="alt" />
@@ -126,10 +115,7 @@
                 <button id="loop" onclick="slidy.update({loop: activate(this, options.loop)})">
                     loop
                 </button>
-                <button
-                    id="vertical"
-                    onclick="slidy.update({vertical: activate(this, options.vertical)})"
-                >
+                <button id="vertical" onclick="slidy.update({vertical: activate(this, options.vertical)})">
                     vertical
                 </button>
             </nav>
@@ -147,54 +133,25 @@
             <form>
                 <fieldset>
                     <label title="length">
-                        <input
-                            onchange="changeValue()"
-                            name="length"
-                            type="number"
-                            size="1"
-                            step="1"
-                            min="1"
-                            max="50"
-                        />
+                        <input onchange="changeValue()" name="length" type="number" size="1" step="1" min="1"
+                            max="50" />
                     </label>
                     <label title="width">
-                        <input
-                            onchange="setVar(main, this.name, this.value)"
-                            name="width"
-                            size="5"
-                        />
+                        <input onchange="setVar(main, this.name, this.value)" name="width" size="5" />
                     </label>
                     <label title="height">
-                        <input
-                            onchange="setVar(main, this.name, this.value)"
-                            name="height"
-                            size="5"
-                        />
+                        <input onchange="setVar(main, this.name, this.value)" name="height" size="5" />
                     </label>
                     <label title="gap">
                         <input onchange="setVar(main, this.name, this.value)" name="gap" size="5" />
                     </label>
                     <label title="duration">
-                        <input
-                            onchange="changeValue()"
-                            name="duration"
-                            type="number"
-                            size="2"
-                            step="1"
-                            min="100"
-                            max="1000"
-                        />
+                        <input onchange="changeValue()" name="duration" type="number" size="2" step="1" min="100"
+                            max="1000" />
                     </label>
                     <label title="gravity">
-                        <input
-                            onchange="changeValue()"
-                            name="gravity"
-                            type="number"
-                            size="1"
-                            step="0.1"
-                            min="0.1"
-                            max="2"
-                        />
+                        <input onchange="changeValue()" name="gravity" type="number" size="1" step="0.1" min="0.1"
+                            max="2" />
                     </label>
                     <label title="align">
                         <select value="center" name="snap" onchange="changeValue()">
@@ -254,4 +211,5 @@
             </code></pre>
         </article>
     </body>
+
 </html>
