--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
         <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="stylesheet" href="tokens.css" />
         <link rel="stylesheet" href="global.css" />
         <link rel="stylesheet" href="build/bundle.css" />
 
@@ -15,5 +16,7 @@
         <script defer src="build/bundle.js"></script>
     </head>
 
-    <body></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
