@slid/element - add full iife

--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -51,8 +51,9 @@
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" defer href="dev.css" />
         <link rel="stylesheet" href="build/element.css" />
-        <script type="text/javascript" src="https://unpkg.com/@slidy/core/dist/index.js"></script>
-        <script type="text/javascript" src="https://unpkg.com/@slidy/animation/dist/index.js"></script>
+        <script type="text/javascript" src="index.js"></script>
+        <!-- <script type="text/javascript" src="https://unpkg.com/@slidy/core/dist/index.js"></script> -->
+        <!-- <script type="text/javascript" src="https://unpkg.com/@slidy/animation/dist/index.js"></script> -->
 
         <title id="title"></title>
 
@@ -63,7 +64,7 @@
             import * as utils from './utils.js';
             import { getPhotos } from './api.js';
             import { setEvents } from './env.js';
-            import './build/element.js';
+            // import './build/element.js';
 
             window.utils = utils;
             window.easings = easings;
