@slidy/element - CustomElement

--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -126,7 +126,7 @@
         <script>
             const element = document.querySelector('slidy-element');
             console.log('script window:', window, Slidy, element);
-            element.options = { index: 4, animation: Slidy.stairs };
+            // element.options = { index: 4, animation: Slidy.stairs };
         </script>
 
         <footer>
