@slidy/element - add core methods & cleanup

--- a/packages/element/public/index.html
+++ b/packages/element/public/index.html
@@ -51,20 +51,19 @@
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" defer href="dev.css" />
         <link rel="stylesheet" href="build/element.css" />
-        <script type="text/javascript" src="index.js"></script>
+        <!-- <script type="text/javascript" src="index.js"></script> -->
         <!-- <script type="text/javascript" src="https://unpkg.com/@slidy/core/dist/index.js"></script> -->
-        <!-- <script type="text/javascript" src="https://unpkg.com/@slidy/animation/dist/index.js"></script> -->
+        <script type="text/javascript" src="https://unpkg.com/@slidy/animation/dist/index.js"></script>
 
         <title id="title"></title>
 
         <script type="module">
-            import { slidy as slidyCore } from './build/core.js';
             import * as easings from './build/easing.js';
             import * as animations from './build/animation.js';
             import * as utils from './utils.js';
             import { getPhotos } from './api.js';
             import { setEvents } from './env.js';
-            // import './build/element.js';
+            import './build/element.js';
 
             window.utils = utils;
             window.easings = easings;
@@ -84,16 +83,16 @@
                 easing: easings.lenear,
             };
             window.position = 0;
-            window.slidy = null;
-            window.slidyT = null;
             window.getPhotos = getPhotos;
             window.updateAttribute = (attribute, cb) => {
                 const value = node.getAttribute(attribute);
                 node.setAttribute(attribute, cb(JSON.parse(value)));
             };
+            // node.update({ animation: animations.stairs });
+            // updateAttribute('animation', () => animations.stairs);
             console.log('module window:', window);
 
-            fetch('https://unpkg.com/@slidy/core/package.json', {
+            fetch('https://unpkg.com/@slidy/element/package.json', {
                 mode: 'cors',
             })
                 .then(async (res) => await res.json())
@@ -114,19 +113,20 @@
         </header>
 
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
-            <slidy-element id="node" tabindex="0" index="2" snap="center" loop="false" gravity="">
+            <slidy-element id="node" tabindex="0" index="2" snap="center" loop="false">
                 <!-- <img src="https://picsum.photos/id/13/1280/800.jpg" />
                 <img src="https://picsum.photos/id/14/1280/800.jpg" />
                 <img src="https://picsum.photos/id/15/1280/800.jpg" />
                 <img src="https://picsum.photos/id/16/1280/800.jpg" />
                 <img src="https://picsum.photos/id/17/1280/800.jpg" /> -->
             </slidy-element>
-            <nav id="thumbs"></nav>
+            <slidy-element id="thumbs" style="--width: 100px; --height: 100px; --gap: 1rem; --flow: row;">
+            </slidy-element>
         </main>
         <script>
-            const element = document.querySelector('slidy-element');
-            console.log('script window:', window, Slidy, element);
-            // element.options = { index: 4, animation: Slidy.stairs };
+            const element = document.querySelector('#node');
+            console.log('script window:', window);
+            element.options = { index: 4, animation: SlidyAnimation.stairs };
         </script>
 
         <footer>
@@ -149,18 +149,18 @@
             <form>
                 <fieldset>
                     <label title="axis">axis
-                        <select id="axis" name="axis" onchange="node.slidy.update({ axis: this.value })"></select>
+                        <select id="axis" name="axis" onchange="node.update({ axis: this.value })"></select>
                     </label>
                     <label title="snap">snap
-                        <select id="snap" name="snap" onchange="node.slidy.update({ snap: this.value })"></select>
+                        <select id="snap" name="snap" onchange="node.update({ snap: this.value })"></select>
                     </label>
                     <label title="animation">animation
                         <select id="animation" name="animation"
-                            onchange="node.slidy.update({ animation: animations[this.value] })"></select>
+                            onchange="node.update({ animation: animations[this.value] })"></select>
                     </label>
                     <label title="easing">easing
                         <select id="easing" name="easing"
-                            onchange="node.slidy.update({ easing: easings[this.value] })"></select>
+                            onchange="node.update({ easing: easings[this.value] })"></select>
                     </label>
                 </fieldset>
             </form>
@@ -168,23 +168,23 @@
             <form>
                 <fieldset>
                     <label title="clamp">clamp
-                        <input id="clamp" onchange="node.slidy.update({ clamp: +this.value })" name="clamp"
-                            type="number" size="1" step="1" min="0" max="3" />
+                        <input id="clamp" onchange="node.update({ clamp: +this.value })" name="clamp" type="number"
+                            size="1" step="1" min="0" max="3" />
                     </label>
                     <label title="sensity">sensity
-                        <input id="sensity" onchange="node.slidy.update({ sensity: +this.value })" name="sensity"
+                        <input id="sensity" onchange="node.update({ sensity: +this.value })" name="sensity"
                             type="number" size="2" step="1" min="0" max="100" />
                     </label>
                     <label title="indent">indent
-                        <input id="indent" onchange="node.slidy.update({ indent: +this.value })" name="indent"
-                            type="number" size="1" step="0.1" min="-2" max="2" />
+                        <input id="indent" onchange="node.update({ indent: +this.value })" name="indent" type="number"
+                            size="1" step="0.1" min="-2" max="2" />
                     </label>
                     <label title="duration">duration
-                        <input id="duration" onchange="node.slidy.update({ duration: +this.value })" name="duration"
+                        <input id="duration" onchange="node.update({ duration: +this.value })" name="duration"
                             type="number" size="2" step="1" min="100" max="1000" />
                     </label>
                     <label title="gravity">gravity
-                        <input id="gravity" onchange="node.slidy.update({ gravity: +this.value })" name="gravity"
+                        <input id="gravity" onchange="node.update({ gravity: +this.value })" name="gravity"
                             type="number" size="1" step="0.1" min="0.1" max="2" />
                     </label>
                 </fieldset>
@@ -216,24 +216,6 @@
                 </fieldset>
             </form>
         </footer>
-
-        <!-- <section id="s1">
-            <section id="s2">
-                <img src="https://picsum.photos/id/13/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/14/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/15/1280/800.jpg" alt="10" />
-            </section>
-            <section id="s3">
-                <img src="https://picsum.photos/id/16/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/17/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/18/1280/800.jpg" alt="10" />
-            </section>
-            <section id="s4">
-                <img src="https://picsum.photos/id/19/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/20/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/21/1280/800.jpg" alt="10" />
-            </section>
-        </section> -->
 
         <article>
             <h1>@Slidy</h1>
